change path in 404

--- a/404.html
+++ b/404.html
@@ -32,5 +32,5 @@
 	</code>
     </div>
 
-    <p> <a href="../index.html"> Go to the home page </a> </p>
+    <p> <a href="index.html"> Go to the home page </a> </p>
 	
